add react icons package

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .linkText {
-  @apply text-xl font-sans font-semibold;
+  @apply text-xl  font-semibold text-black hover:text-sky-400;
 }
