--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,7 @@
 .scroll-bar {
   scrollbar-width: none;
 }
+
+.card-container {
+  @apply flex flex-col gap-4 rounded shadow-md p-4 border border-gray-100;
+}
