--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  scroll-behavior: smooth;
+}
 .linkText {
   @apply text-lg  text-black hover:text-sky-400 hover:underline hover:underline-offset-8;
 }
